--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ notes/
 *.DS_Store
 lib/__pycache__/__init__.cpython-310.pyc
 lib/__pycache__/creoClass.cpython-310.pyc
+
+junk*
+working*
+np_bomSummary.txt
+np_mergedBOM.txt
+np_un-mergedBOM.txt
+np_unmergedBOM.txt
+unmerged_mergedBOM.txt
+lib/__pycache__/creoClass.cpython-310.pyc
+.gitignore
